dark mode fixes, remove dark mode from homepage

--- a/app/globals.css
+++ b/app/globals.css
@@ -14,6 +14,7 @@
     --chart-8: #f46a9b;
     --chart-9: #ea5545;
 
+    --text: #000;
     --primary: #002766;
     --primary-content: #581188;
     --secondary: #0062ff;
@@ -25,19 +26,15 @@
     --apr: rgba(0, 128, 0, 0.3);
     --den: rgba(255, 0, 0, 0.3);
     --apl: rgba(255, 255, 0, 0.3);
-
-    --popover: 0 0% 100%;
-    --popover-foreground: 222.2 47.4% 11.2%;
   }
 
   .dark {
     --text: #eae9fc;
-    --background: #010104;
+    --primary-content: #79409f;
+    --background: #1a1a1d;
     --primary: #002766;
     --secondary: #0062ff;
     --accent: #ff00ff;
-
-    --foreground: #000000;
   }
 
   .popover-width-trigger {
